--- a/Anexos.tex
+++ b/Anexos.tex
@@ -6,7 +6,9 @@
 	\pagestyle{plain}
     
 \begin{appendices}
-	\input{Anexos/B.Series.tex}
-    \input{Anexos/C.Musette.tex}
-    \input{Anexos/D.Comm.tex}
+	\input{Anexos/Matrices.tex}
+	\input{Anexos/Series.tex}
+    \input{Anexos/Musette.tex}
+    \input{Anexos/Comm.tex}
+    \input{Anexos/Function.tex}
 \end{appendices}
