--- a/Bibliotecas.tex
+++ b/Bibliotecas.tex
@@ -13,7 +13,7 @@
 \usepackage{amssymb}
 
 % Tachar
-\usepackage[normalem]{ulem}
+\usepackage{soul}
 
 % QED
 \usepackage{amsthm}
@@ -50,9 +50,14 @@
 
 % Dibujos TIKZ
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows,decorations.markings}
+\usetikzlibrary{shapes,arrows,decorations.markings,shapes.misc}
+
+\newcommand*\cancel[2][thin]{\tikz[baseline] \node [strike out,draw,anchor=text,inner sep=0pt,text=black,#1]{#2};}  
+
 \tikzstyle flechita=[decoration={markings,mark=at position 0.015 with {\arrow[scale=1.5,>=triangle 45]{>}}},postaction={decorate}]
+
 \tikzstyle flache=[decoration={markings,mark=at position 1 with {\arrow[scale=1.5,>=angle 60]{>}}},postaction={decorate}]
+
 \tikzstyle flocho=[decoration={markings,mark=at position 0.9999 with {\arrow[red,scale=1,>=triangle 45]{>}}},postaction={decorate}]
 
 % Columnas
@@ -66,18 +71,6 @@
 
 % Para código
 \usepackage{listings}
-\lstset{
-	tabsize=3,
-	language=C++,
-	frame=lines,
-	numbers=left,
-	numberstyle=\tiny,
-	basicstyle=\footnotesize,
-	identifierstyle=\color{magenta},
-	keywordstyle=\color[rgb]{0,0,1},
-	commentstyle=\color[rgb]{0.09, 0.45, 0.27},
-	stringstyle=\color{red}
-}
 
 % Clear double space limpio
 \makeatletter
